--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <h4 class="cor">Confira nosso <br> trabalho</h4>
         </div>
         <div class="elemente-rodape">
-            <a href="https://www.instagram.com/jamaica_polimento_/" target="_blank"><img class="instagram" src="img/instagram.png" alt="imgInstagram"><span class="seguir">SIGA NOSSO TRABALHO</span></a>
+           <img class="instagram" src="img/instagram.png" alt="imgInstagram">
+            <a href="https://www.instagram.com/jamaica_polimento_/">@jamaica_polimento_</a>
         </div>
     </footer>
     
