--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="elemente-rodape">
            <img class="instagram" src="img/instagram.png" alt="imgInstagram">
-            <a href="https://www.instagram.com/jamaica_polimento_/">@jamaica_polimento_</a>
+            <a href="https://www.instagram.com/jamaica_polimento_/">Siga nosso perfil</a>
         </div>
     </footer>
     
